# open-kioku

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  STABILITY.md  add_tests.py  audit.toml  claude_plugin.json  demo.tape  deny-output.txt  deny.toml  fix_error_impls.py  fix_errors.py  glama.json  mcp.json  ok.toml  patch_query.py  release-metadata.json  run.json  smithery.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.cursor-plugin/agents/: code-intelligence.md
.cursor-plugin/rules/: impact-before-refactor.mdc  search-before-edit.mdc  validate-before-apply.mdc
.cursor-plugin/skills/: open-kioku.mdc
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  launch_feedback.yml
.github/workflows/: bench.yml  ci.yml  crates.yml  pages.yml  release.yml
.ocf/: index.sqlite
Formula/: open-kioku.rb
benches/: indexing_throughput.rs
benchmarks/: architecture-policy-cases.json  contract-cases.json  history-cases.json  reviewer-cases.json  similar-history-cases.json  workflow-cases.json
benchmarks/contract-fixture/: Cargo.toml
crates/open-kioku-actions/: Cargo.toml
crates/open-kioku-actions/src/: lib.rs
crates/open-kioku-architecture/: Cargo.toml
crates/open-kioku-architecture/src/: lib.rs  resolver.rs
crates/open-kioku-aws/: Cargo.toml
crates/open-kioku-cli/: Cargo.toml
crates/open-kioku-cli/benches/: index.rs
crates/open-kioku-cli/src/: lib.rs  main.rs  search.rs  types.rs
crates/open-kioku-cli/src/bench/: mod.rs
crates/open-kioku-cli/src/commands/: architecture.rs  context.rs  contract.rs  index.rs  mod.rs  snapshot.rs  verification.rs
crates/open-kioku-cli/src/reports/: proof.rs  ranking.rs  status_setup_doctor.rs
crates/open-kioku-cli/tests/: cli_smoke.rs
crates/open-kioku-config/: Cargo.toml
crates/open-kioku-config/src/: architecture_policy.rs  lib.rs
crates/open-kioku-context/: Cargo.toml
crates/open-kioku-context-compress/: Cargo.toml
crates/open-kioku-context-compress/src/: lib.rs
crates/open-kioku-context/src/: lib.rs
crates/open-kioku-contract/: Cargo.toml
crates/open-kioku-contract/examples/: change_contract_v1.rs
crates/open-kioku-contract/src/: builder.rs  lib.rs  store.rs  verifier.rs
crates/open-kioku-contract/tests/fixtures/: change_contract_v1.json
crates/open-kioku-core/: Cargo.toml
crates/open-kioku-core/src/: identity.rs  lib.rs
crates/open-kioku-daemon/: Cargo.toml
crates/open-kioku-daemon/src/: lib.rs
crates/open-kioku-embeddings/: Cargo.toml
crates/open-kioku-embeddings/src/: lib.rs
crates/open-kioku-errors/: Cargo.toml
crates/open-kioku-errors/src/: lib.rs
crates/open-kioku-evidence/: Cargo.toml
crates/open-kioku-evidence/src/: lib.rs
crates/open-kioku-format/: Cargo.toml
crates/open-kioku-format/src/: lib.rs
crates/open-kioku-git/: Cargo.toml
crates/open-kioku-git/benches/: history.rs
crates/open-kioku-git/src/: lib.rs  ownership.rs  reviewers.rs
crates/open-kioku-github/: Cargo.toml
crates/open-kioku-graph/: Cargo.toml
crates/open-kioku-graph/src/: buffer.rs  lib.rs  query.rs  schema.rs
crates/open-kioku-impact/: Cargo.toml
crates/open-kioku-impact/src/: lib.rs
crates/open-kioku-ingest/: Cargo.toml
crates/open-kioku-ingest/src/: lib.rs  relationships.rs  runtime.rs  symbol_registry.rs  validation.rs
crates/open-kioku-ingest/src/resolver/: mod.rs
crates/open-kioku-ingest/tests/: index_fixture.rs
crates/open-kioku-jira/: Cargo.toml
crates/open-kioku-languages/: Cargo.toml
crates/open-kioku-languages/src/: lib.rs
crates/open-kioku-lsp/: Cargo.toml
crates/open-kioku-lsp/src/: lib.rs
crates/open-kioku-mcp/: Cargo.toml
crates/open-kioku-mcp/snapshots/mcp/: broad_graph_search.json  get_evidence_schema.json  malformed_request.json  pagination.json  query_evidence_graph.json  repo_status.json  tool_error.json
crates/open-kioku-mcp/src/: lib.rs
crates/open-kioku-memory/: Cargo.toml
crates/open-kioku-memory/src/: lib.rs
crates/open-kioku-parse/: Cargo.toml
crates/open-kioku-parse/src/: lib.rs
crates/open-kioku-patch/: Cargo.toml
crates/open-kioku-patch/src/: lib.rs
crates/open-kioku-plan/: Cargo.toml
crates/open-kioku-plan/src/: adapter.rs  contract_builder.rs  lib.rs
crates/open-kioku-qdrant/: Cargo.toml
crates/open-kioku-qdrant/src/: lib.rs
crates/open-kioku-ranking/: Cargo.toml
crates/open-kioku-ranking/src/: lib.rs
crates/open-kioku-sandbox/: Cargo.toml
crates/open-kioku-sandbox/src/: lib.rs
crates/open-kioku-scip/: Cargo.toml
crates/open-kioku-scip/src/: lib.rs
crates/open-kioku-search/: Cargo.toml
crates/open-kioku-search-regex/: Cargo.toml
crates/open-kioku-search-regex/src/: lib.rs
crates/open-kioku-search-tantivy/: Cargo.toml
crates/open-kioku-semantic/: Cargo.toml
crates/open-kioku-sentry/: Cargo.toml
crates/open-kioku-storage-kv/: Cargo.toml
crates/open-kioku-storage-sqlite/: Cargo.toml
demo/: CNAME  index.html  robots.txt  sitemap.xml
demo/.well-known/: glama.json
docs/: architecture-audit-chief-architect.md  architecture-policy.md  architecture.md  change-contract.md  context-pack-spec.md  contract-benchmarks.md  contributor-guide.md  crate-map.md  embedding-providers.md  evidence-graph-v2-alignment.md  execution-plan.md  graph-model.md  history-provenance.md  hybrid-ranking.md  indexing-pipeline.md  large-repo-proof.md  launch-script.md  license-faq.md  mcp-tools.md  proof.md  ranking.md  release-checklist.md  roadmap.md  security-model.md  semantic-search.md  storage-model.md  usefulness-proof.md  vector-index.md  workflow-benchmarks.md
examples/: architecture-policy.toml  ocf.toml  smoke-client.py
scripts/: generate-proof.sh  prove-usefulness.py  publish-crates.sh  quickstart-demo.sh  render-quickstart-demo.py  sync-version.sh  validate-docs.sh  validate-release-metadata.py  validate-versions.sh  verify-release-readiness.sh
(+87 files in other folders)
