[package]
name = "open-kioku-actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
open-kioku-config = { path = "../open-kioku-config" }
open-kioku-errors = { path = "../open-kioku-errors" }
globset.workspace = true
