[package]
name = "open-kioku-actions"
version.workspace = true
edition.workspace = true
description = "Action execution primitives for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-config = { version = "1.0.4", path = "../open-kioku-config" }
open-kioku-errors = { version = "1.0.4", path = "../open-kioku-errors" }
globset.workspace = true
