[package]
name = "open-kioku-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ok"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
open-kioku-architecture = { path = "../open-kioku-architecture" }
open-kioku-config = { path = "../open-kioku-config" }
open-kioku-context = { path = "../open-kioku-context" }
open-kioku-core = { path = "../open-kioku-core" }
open-kioku-errors = { path = "../open-kioku-errors" }
open-kioku-graph = { path = "../open-kioku-graph" }
open-kioku-impact = { path = "../open-kioku-impact" }
open-kioku-ingest = { path = "../open-kioku-ingest" }
open-kioku-mcp = { path = "../open-kioku-mcp" }
open-kioku-patch = { path = "../open-kioku-patch" }
open-kioku-search-regex = { path = "../open-kioku-search-regex" }
open-kioku-search-tantivy = { path = "../open-kioku-search-tantivy" }
open-kioku-storage = { path = "../open-kioku-storage" }
open-kioku-storage-sqlite = { path = "../open-kioku-storage-sqlite" }
open-kioku-symbols = { path = "../open-kioku-symbols" }
open-kioku-tests = { path = "../open-kioku-tests" }
open-kioku-watch = { path = "../open-kioku-watch" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
