[package]
name = "open-kioku-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ok"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
open-kioku-architecture = { path = "../open-kioku-architecture" }
open-kioku-config = { path = "../open-kioku-config" }
open-kioku-context = { path = "../open-kioku-context" }
open-kioku-core = { path = "../open-kioku-core" }
open-kioku-errors = { path = "../open-kioku-errors" }
open-kioku-graph = { path = "../open-kioku-graph" }
open-kioku-impact = { path = "../open-kioku-impact" }
open-kioku-ingest = { path = "../open-kioku-ingest" }
open-kioku-mcp = { path = "../open-kioku-mcp" }
open-kioku-patch = { path = "../open-kioku-patch" }
open-kioku-search-regex = { path = "../open-kioku-search-regex" }
open-kioku-search-tantivy = { path = "../open-kioku-search-tantivy" }
open-kioku-storage = { path = "../open-kioku-storage" }
open-kioku-storage-sqlite = { path = "../open-kioku-storage-sqlite" }
open-kioku-symbols = { path = "../open-kioku-symbols" }
open-kioku-tests = { path = "../open-kioku-tests" }
open-kioku-watch = { path = "../open-kioku-watch" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
criterion = "0.5.1"
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "index"
harness = false

[package.metadata.binstall]
bin-dir = "{ bin }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-x86_64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-x86_64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-arm64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-arm64"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ok-macos-x86_64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ok-macos-arm64"
