[package]
name = "open-kioku-cli"
version.workspace = true
edition.workspace = true
description = "Open Kioku command-line interface and MCP server binary."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ok"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
open-kioku-architecture = { version = "2.0.0", path = "../open-kioku-architecture" }
open-kioku-config = { version = "2.0.0", path = "../open-kioku-config" }
open-kioku-context = { version = "2.0.0", path = "../open-kioku-context" }
open-kioku-context-compress = { version = "2.0.0", path = "../open-kioku-context-compress" }
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }
open-kioku-errors = { version = "2.0.0", path = "../open-kioku-errors" }
open-kioku-format = { version = "2.0.0", path = "../open-kioku-format" }
open-kioku-graph = { version = "2.0.0", path = "../open-kioku-graph" }
open-kioku-git = { version = "2.0.0", path = "../open-kioku-git" }
open-kioku-impact = { version = "2.0.0", path = "../open-kioku-impact" }
open-kioku-ingest = { version = "2.0.0", path = "../open-kioku-ingest" }
open-kioku-mcp = { version = "2.0.0", path = "../open-kioku-mcp" }
open-kioku-memory = { version = "2.0.0", path = "../open-kioku-memory" }
open-kioku-patch = { version = "2.0.0", path = "../open-kioku-patch" }
open-kioku-plan = { version = "2.0.0", path = "../open-kioku-plan" }
open-kioku-ranking = { version = "2.0.0", path = "../open-kioku-ranking" }
open-kioku-search-regex = { version = "2.0.0", path = "../open-kioku-search-regex" }
open-kioku-search-tantivy = { version = "2.0.0", path = "../open-kioku-search-tantivy" }
open-kioku-semantic = { version = "2.0.0", path = "../open-kioku-semantic" }
open-kioku-storage = { version = "2.0.0", path = "../open-kioku-storage" }
open-kioku-storage-sqlite = { version = "2.0.0", path = "../open-kioku-storage-sqlite" }
open-kioku-symbols = { version = "2.0.0", path = "../open-kioku-symbols" }
open-kioku-tests = { version = "2.0.0", path = "../open-kioku-tests" }
open-kioku-watch = { version = "2.0.0", path = "../open-kioku-watch" }
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
tokio.workspace = true
toml = "0.8"
tracing-subscriber.workspace = true
walkdir.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion = "0.5.1"
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "index"
harness = false

[package.metadata.binstall]
bin-dir = "{ bin }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-x86_64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-x86_64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-arm64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/ok-linux-arm64"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ok-macos-x86_64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/ok-macos-arm64"
