[package]
name = "open-kioku-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
open-kioku-errors = { path = "../open-kioku-errors" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
