[package]
name = "open-kioku-config"
version.workspace = true
edition.workspace = true
description = "Configuration loading and validation for Open Kioku repositories."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
globset.workspace = true
open-kioku-errors = { version = "2.0.0", path = "../open-kioku-errors" }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
