[package]
name = "open-kioku-context-compress"
version.workspace = true
edition.workspace = true
description = "Reversible context handle compression for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { version = "1.0.3", path = "../open-kioku-core" }
open-kioku-errors = { version = "1.0.3", path = "../open-kioku-errors" }
open-kioku-memory = { version = "1.0.3", path = "../open-kioku-memory" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
