[package]
name = "open-kioku-core"
version.workspace = true
edition.workspace = true
description = "Shared data models and schema types for Open Kioku code intelligence."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-errors = { version = "2.0.0", path = "../open-kioku-errors" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
