[package]
name = "open-kioku-daemon"
version.workspace = true
edition.workspace = true
description = "Daemon primitives for Open Kioku background services."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-errors = { version = "1.0.1", path = "../open-kioku-errors" }
tokio.workspace = true

