[package]
name = "open-kioku-embeddings"
version.workspace = true
edition.workspace = true
description = "Embedding provider interfaces for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-errors = { version = "1.0.4", path = "../open-kioku-errors" }

