[package]
name = "open-kioku-evidence"
version.workspace = true
edition.workspace = true
description = "Evidence records and scoring support for Open Kioku analysis."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-core = { version = "1.0.3", path = "../open-kioku-core" }

