[package]
name = "open-kioku-evidence"
version.workspace = true
edition.workspace = true
description = "Evidence records and scoring support for Open Kioku analysis."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }

