[package]
name = "open-kioku-format"
version.workspace = true
edition.workspace = true
description = "Prompt-oriented renderers for Open Kioku reports."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-core = { version = "1.0.3", path = "../open-kioku-core" }
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
