[package]
name = "open-kioku-git"
version.workspace = true
edition.workspace = true
description = "Git repository helpers for Open Kioku indexing and analysis."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-errors = { version = "1.0.4", path = "../open-kioku-errors" }

