[package]
name = "open-kioku-git"
version.workspace = true
edition.workspace = true
description = "Git repository helpers for Open Kioku indexing and analysis."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }
open-kioku-errors = { version = "2.0.0", path = "../open-kioku-errors" }
serde.workspace = true

[dev-dependencies]
criterion = "0.5.1"
tempfile.workspace = true

[[bench]]
name = "history"
harness = false
