[package]
name = "open-kioku-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { path = "../open-kioku-core" }
open-kioku-errors = { path = "../open-kioku-errors" }
open-kioku-storage = { path = "../open-kioku-storage" }
serde_json.workspace = true
sha2.workspace = true


