[package]
name = "open-kioku-graph"
version.workspace = true
edition.workspace = true
description = "Dependency and symbol graph construction for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { version = "1.0.1", path = "../open-kioku-core" }
open-kioku-errors = { version = "1.0.1", path = "../open-kioku-errors" }
open-kioku-storage = { version = "1.0.1", path = "../open-kioku-storage" }
serde_json.workspace = true
sha2.workspace = true


