[package]
name = "open-kioku-impact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { path = "../open-kioku-core" }
open-kioku-errors = { path = "../open-kioku-errors" }
open-kioku-search-regex = { path = "../open-kioku-search-regex" }
open-kioku-storage = { path = "../open-kioku-storage" }
[dev-dependencies]
open-kioku-storage-sqlite = { path = "../open-kioku-storage-sqlite" }
