[package]
name = "open-kioku-languages"
version.workspace = true
edition.workspace = true
description = "Language detection and metadata for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-core = { version = "1.0.4", path = "../open-kioku-core" }

