[package]
name = "open-kioku-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
open-kioku-actions = { path = "../open-kioku-actions" }
open-kioku-architecture = { path = "../open-kioku-architecture" }
open-kioku-config = { path = "../open-kioku-config" }
open-kioku-context = { path = "../open-kioku-context" }
open-kioku-impact = { path = "../open-kioku-impact" }
open-kioku-patch = { path = "../open-kioku-patch" }
open-kioku-plan = { path = "../open-kioku-plan" }
open-kioku-search-regex = { path = "../open-kioku-search-regex" }
open-kioku-search-tantivy = { path = "../open-kioku-search-tantivy" }
open-kioku-semantic = { path = "../open-kioku-semantic" }
open-kioku-sentry = { path = "../open-kioku-sentry" }
open-kioku-storage = { path = "../open-kioku-storage" }
open-kioku-storage-sqlite = { path = "../open-kioku-storage-sqlite" }
open-kioku-symbols = { path = "../open-kioku-symbols" }
open-kioku-tests = { path = "../open-kioku-tests" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
