[package]
name = "open-kioku-mcp"
version.workspace = true
edition.workspace = true
description = "Model Context Protocol server implementation for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
open-kioku-actions = { version = "2.0.0", path = "../open-kioku-actions" }
open-kioku-architecture = { version = "2.0.0", path = "../open-kioku-architecture" }
open-kioku-config = { version = "2.0.0", path = "../open-kioku-config" }
open-kioku-context = { version = "2.0.0", path = "../open-kioku-context" }
open-kioku-context-compress = { version = "2.0.0", path = "../open-kioku-context-compress" }
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }
open-kioku-format = { version = "2.0.0", path = "../open-kioku-format" }
open-kioku-graph = { version = "2.0.0", path = "../open-kioku-graph" }
open-kioku-impact = { version = "2.0.0", path = "../open-kioku-impact" }
open-kioku-memory = { version = "2.0.0", path = "../open-kioku-memory" }
open-kioku-patch = { version = "2.0.0", path = "../open-kioku-patch" }
open-kioku-plan = { version = "2.0.0", path = "../open-kioku-plan" }
open-kioku-search-regex = { version = "2.0.0", path = "../open-kioku-search-regex" }
open-kioku-search-tantivy = { version = "2.0.0", path = "../open-kioku-search-tantivy" }
open-kioku-semantic = { version = "2.0.0", path = "../open-kioku-semantic" }
open-kioku-sentry = { version = "2.0.0", path = "../open-kioku-sentry" }
open-kioku-storage = { version = "2.0.0", path = "../open-kioku-storage" }
open-kioku-storage-sqlite = { version = "2.0.0", path = "../open-kioku-storage-sqlite" }
open-kioku-symbols = { version = "2.0.0", path = "../open-kioku-symbols" }
open-kioku-tests = { version = "2.0.0", path = "../open-kioku-tests" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
