[package]
name = "open-kioku-memory"
version.workspace = true
edition.workspace = true
description = "Append-only repo memory and entity-linked recall for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }
open-kioku-errors = { version = "2.0.0", path = "../open-kioku-errors" }
rusqlite.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
