[package]
name = "open-kioku-parse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { path = "../open-kioku-core" }
open-kioku-tree-sitter = { path = "../open-kioku-tree-sitter" }
regex.workspace = true
sha2.workspace = true
