[package]
name = "open-kioku-parse"
version.workspace = true
edition.workspace = true
description = "Source parsing and symbol extraction for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }
open-kioku-tree-sitter = { version = "2.0.0", path = "../open-kioku-tree-sitter" }
regex.workspace = true
sha2.workspace = true
