[package]
name = "open-kioku-patch"
version.workspace = true
edition.workspace = true
description = "Patch planning and review support for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-actions = { version = "2.0.0", path = "../open-kioku-actions" }
open-kioku-config = { version = "2.0.0", path = "../open-kioku-config" }
open-kioku-context = { version = "2.0.0", path = "../open-kioku-context" }
open-kioku-core = { version = "2.0.0", path = "../open-kioku-core" }
open-kioku-errors = { version = "2.0.0", path = "../open-kioku-errors" }
open-kioku-impact = { version = "2.0.0", path = "../open-kioku-impact" }
open-kioku-storage = { version = "2.0.0", path = "../open-kioku-storage" }
open-kioku-tests = { version = "2.0.0", path = "../open-kioku-tests" }
serde.workspace = true
sha2.workspace = true
